--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -9,7 +9,7 @@
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
-<body>
+<body class="m-5">
 
     <div class="container">
         <div class="row">
@@ -17,17 +17,25 @@
 
                 <div class="card">
                     <div class="card-header">
-                      Gallery
+                      Category
                     </div>
                     <ul class="list-group list-group-flush">
-                      <li class="list-group-item">Cras justo odio</li>
+                      <li class="list-group-item">All</li>
                       <li class="list-group-item">Dapibus ac facilisis in</li>
                       <li class="list-group-item">Vestibulum at eros</li>
+                      <li class="list-group-item">Cras justo odio</li>
                     </ul>
                   </div>
             </div>
             <div class="col-md-9">
-                Gallery
+                <div class="row">
+                    <div class="card">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                      </div>
+                </div>
             </div>
         </div>
     </div>
