--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -8,6 +8,14 @@
 
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+<style>
+    .image-thumbnail {
+        
+        height: 200px;
+        
+    }
+</style>
 </head>
 <body class="m-5">
 
@@ -29,12 +37,16 @@
             </div>
             <div class="col-md-9">
                 <div class="row">
-                    <div class="card">
-                        <img class="card-img-top" src="..." alt="Card image cap">
-                        <div class="card-body">
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+
+                    <div class="col-md-4">
+                        <div class="card my-2">
+                            <img class="image-thumbnail" src="https://images.unsplash.com/photo-1583083527882-4bee9aba2eea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8M3x8fGVufDB8fHx8&w=1000&q=80" alt="Card image cap">
+                            <div class="card-body">
+                              <p class="card-text">Category : Pets</p>
+                            </div>
+                            <a class="btn btn-outline-dark btn-sm m-1">view</a>
                         </div>
-                      </div>
+                    </div>
                 </div>
             </div>
         </div>
