--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -42,7 +42,37 @@
                         <div class="card my-2">
                             <img class="image-thumbnail" src="https://images.unsplash.com/photo-1583083527882-4bee9aba2eea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8M3x8fGVufDB8fHx8&w=1000&q=80" alt="Card image cap">
                             <div class="card-body">
-                              <p class="card-text">Category : Pets</p>
+                              <small>Category : Pets</small>
+                            </div>
+                            <a class="btn btn-outline-dark btn-sm m-1">view</a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card my-2">
+                            <img class="image-thumbnail" src="https://images.unsplash.com/photo-1583083527882-4bee9aba2eea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8M3x8fGVufDB8fHx8&w=1000&q=80" alt="Card image cap">
+                            <div class="card-body">
+                              <small>Category : Pets</small>
+                            </div>
+                            <a class="btn btn-outline-dark btn-sm m-1">view</a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card my-2">
+                            <img class="image-thumbnail" src="https://images.unsplash.com/photo-1583083527882-4bee9aba2eea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8M3x8fGVufDB8fHx8&w=1000&q=80" alt="Card image cap">
+                            <div class="card-body">
+                              <small>Category : Pets</small>
+                            </div>
+                            <a class="btn btn-outline-dark btn-sm m-1">view</a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card my-2">
+                            <img class="image-thumbnail" src="https://images.unsplash.com/photo-1583083527882-4bee9aba2eea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8M3x8fGVufDB8fHx8&w=1000&q=80" alt="Card image cap">
+                            <div class="card-body">
+                              <small>Category : Pets</small>
                             </div>
                             <a class="btn btn-outline-dark btn-sm m-1">view</a>
                         </div>
