--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -44,7 +44,7 @@
                             <div class="card-body">
                               <small>Category : Pets</small>
                             </div>
-                            <a class="btn btn-outline-dark btn-sm m-1">view</a>
+                            <a href="% url 'photo' 1 %" class="btn btn-outline-dark btn-sm m-1">view</a>
                         </div>
                     </div>
 
@@ -74,7 +74,7 @@
                             <div class="card-body">
                               <small>Category : Pets</small>
                             </div>
-                            <a class="btn btn-outline-dark btn-sm m-1">view</a>
+                            <a href="% url 'photo'  %" class="btn btn-outline-dark btn-sm m-1">view</a>
                         </div>
                     </div>
                 </div>
