--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -13,6 +13,7 @@
     .image-thumbnail {
         
         height: 200px;
+        object-fit: cover;
         
     }
 </style>
@@ -32,6 +33,10 @@
                       <li class="list-group-item">Dapibus ac facilisis in</li>
                       <li class="list-group-item">Vestibulum at eros</li>
                       <li class="list-group-item">Cras justo odio</li>
+
+                      
+                        <a href="{% url 'add' %}" class="btn btn-dark btn-block btn-small m-1">Add photo</a>
+                    
                     </ul>
                   </div>
             </div>
