--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -29,13 +29,16 @@
                       Category
                     </div>
                     <ul class="list-group list-group-flush">
+                        
                       <li class="list-group-item">All</li>
-                      <li class="list-group-item">Dapibus ac facilisis in</li>
-                      <li class="list-group-item">Vestibulum at eros</li>
-                      <li class="list-group-item">Cras justo odio</li>
+                      {% for category in categories%}
+                      <li class="list-group-item">{{category.name}}</li>
+                         
+                      {% endfor %}
+                      
 
                       
-                        <a href="{% url 'add' %}" class="btn btn-dark btn-block btn-small m-1">Add photo</a>
+                      <a href="{% url 'add' %}" class="btn btn-dark btn-block btn-small m-1">Add photo</a>
                     
                     </ul>
                   </div>
