--- a/photos/templates/photos/photo.html
+++ b/photos/templates/photos/photo.html
@@ -14,8 +14,8 @@
             <div class="col">
                 <a href="{% url 'gallery' %}" class="btn btn-dark my-3">Go Back</a>
                 <div style="height: 90vh;">
-                    <img style="max-width: 100%; max-height: 100%; " src="https://images.unsplash.com/photo-1583083527882-4bee9aba2eea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8M3x8fGVufDB8fHx8&w=1000&q=80">
-                    <p>lorem ipsum</p>
+                    <img style="max-width: 100%; max-height: 100%; " src="{{photo.image.url}}">
+                    <p>{{photo.description}} </p>
 
                 </div>
             </div>
