--- a/photos/templates/photos/add.html
+++ b/photos/templates/photos/add.html
@@ -13,7 +13,31 @@
     <div class="container ">
         <div class="row justify-content-center">
             <div class="col-md-4">
-                FORM
+                <a href="{% url 'gallery' %}" class="btn btn-dark my-3">Go Back</a>
+                <div class="card">
+                    <form>
+                            <div class="form-group m-3">
+                             <label>Description</label>
+                             <input name="Description" type="text" placeholder="Enter Description" class="form-control">
+                            </div>
+                            
+                            <div class="form-group m-3">
+                                <label>Select a category</label>
+                                <select name="category" placeholder="Enter Description" class="form-control">
+                                    <option value="none">Select a category...</option>
+                                </select>
+                            </div>  
+   
+
+                        
+                        
+                            <div class="form-group m-3">
+                              <label>Upload image</label>
+                              <input name="image" type="file" class="form-control-file">
+                            </div>
+                        
+                    </form>
+                </div>
             </div>
         </div>
 
