--- a/photos/templates/photos/add.html
+++ b/photos/templates/photos/add.html
@@ -23,10 +23,19 @@
                             
                             <div class="form-group m-3">
                                 <label>Select a category</label>
-                                <select name="category" placeholder="Enter Description" class="form-control">
+                                <select name="category" class="form-control">
                                     <option value="none">Select a category...</option>
+                                    {% for category in categories %}
+                                        <option value="{{category.id}}">{{category.name}}</option>
+                                    {% endfor %}
                                 </select>
-                            </div>  
+                            </div>
+                            
+                            <div class="form-group m-3">
+                                <label>Create a new category</label>
+                                <input name="category_new" type="text" placeholder="Create a new category" class="form-control">
+                            </div>
+                            
    
 
                         
